--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/utility/variables/_grid.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/utility/variables/_grid.scss
@@ -1,5 +1,5 @@
 // Set consistent vertical and horizontal spacing units.
-$vert-spacing-unit: 18px;
+$vert-spacing-unit: 1rem;
 $horz-spacing-unit: 1em;
 
 // Define Susy grid variables mobile first.
@@ -9,7 +9,7 @@ $gutter-width: $horz-spacing-unit;
 $grid-padding: 5px;
 
 $container-style: magic;
-$container-width: 1200px;
+$container-width: 900px;
 
 $tab: 44em 12; // At 44em use 12 columns.
 $desk: 70em 12; // At 70em use 12 columns.
