Fixed layout of reviews on profile page

--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_reviews-list.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_reviews-list.scss
@@ -1,4 +1,4 @@
-.view-search .views-row {
+.views-row {
   @include clearfix(true);
   border-bottom: 1px solid $light-grey;
   padding-bottom: $vert-spacing-unit;
