--- a/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
+++ b/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
@@ -10,21 +10,21 @@
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/\.rvm\/gems\/ruby-1\.9\.3-p125\/gems\/toolkit-1\.3\.7\/stylesheets\/toolkit\/_clearfix\.scss}line{font-family:\0000377}}
-.comment__content, .breadcrumb, .action-links, .block--nav-bar .menu, .clearfix, .pager, .site-branding, .field--type-taxonomy-term-reference .field__items, .view-search .views-row {
+.comment__content, .breadcrumb, .action-links, .block--nav-bar .menu, .clearfix, .pager, .site-branding, .field--type-taxonomy-term-reference .field__items, .views-row {
   /* for IE 6/7 */
   *zoom: expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).style.cssText="clear:both;font:0/0 serif");
   /* non-JS fallback */
   *zoom: 1;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/\.rvm\/gems\/ruby-1\.9\.3-p125\/gems\/toolkit-1\.3\.7\/stylesheets\/toolkit\/_clearfix\.scss}line{font-family:\0000344}}
-.comment__content:before, .breadcrumb:before, .action-links:before, .block--nav-bar .menu:before, .clearfix:before, .pager:before, .site-branding:before, .field--type-taxonomy-term-reference .field__items:before, .view-search .views-row:before, .comment__content:after, .breadcrumb:after, .action-links:after, .block--nav-bar .menu:after, .clearfix:after, .pager:after, .site-branding:after, .field--type-taxonomy-term-reference .field__items:after, .view-search .views-row:after {
+.comment__content:before, .breadcrumb:before, .action-links:before, .block--nav-bar .menu:before, .clearfix:before, .pager:before, .site-branding:before, .field--type-taxonomy-term-reference .field__items:before, .views-row:before, .comment__content:after, .breadcrumb:after, .action-links:after, .block--nav-bar .menu:after, .clearfix:after, .pager:after, .site-branding:after, .field--type-taxonomy-term-reference .field__items:after, .views-row:after {
   content: ".";
   display: block;
   height: 0;
   overflow: hidden;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/\.rvm\/gems\/ruby-1\.9\.3-p125\/gems\/toolkit-1\.3\.7\/stylesheets\/toolkit\/_clearfix\.scss}line{font-family:\0000351}}
-.comment__content:after, .breadcrumb:after, .action-links:after, .block--nav-bar .menu:after, .clearfix:after, .pager:after, .site-branding:after, .field--type-taxonomy-term-reference .field__items:after, .view-search .views-row:after {
+.comment__content:after, .breadcrumb:after, .action-links:after, .block--nav-bar .menu:after, .clearfix:after, .pager:after, .site-branding:after, .field--type-taxonomy-term-reference .field__items:after, .views-row:after {
   clear: both;
 }
 
@@ -1176,63 +1176,63 @@ a#review-now::-moz-focus-inner {
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\000031}}
-.view-search .views-row {
+.views-row {
   border-bottom: 1px solid #dddddd;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\000036}}
-.view-search .views-row .field {
+.views-row .field {
   margin-bottom: 0.5em;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000310}}
-.view-search .views-row .field--name-field-category {
+.views-row .field--name-field-category {
   width: 32px;
   position: absolute;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000313}}
-.view-search .views-row .field--name-field-category .field__item {
+.views-row .field--name-field-category .field__item {
   margin-right: 0;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000318}}
-.view-search .views-row .field--name-field-title {
+.views-row .field--name-field-title {
   font-size: 28px;
   font-size: 1.75rem;
   margin-left: 40px;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000322}}
-.view-search .views-row .location-locations-header {
+.views-row .location-locations-header {
   display: none;
 }
 @media (min-width: 44em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000326}}
-  .view-search .views-row .group-teaser-left, .view-search .views-row .group-teaser-right {
+  .views-row .group-teaser-left, .views-row .group-teaser-right {
     margin-left: 40px;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000329}}
-  .view-search .views-row .field--name-field-title {
+  .views-row .field--name-field-title {
     margin-left: 0;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000332}}
-  .view-search .views-row .field--name-field-category {
+  .views-row .field--name-field-category {
     position: static;
     width: 6.77966%;
     float: left;
     margin-right: 1.69492%;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000335}}
-  .view-search .views-row .field--name-field-category .field__item {
+  .views-row .field--name-field-category .field__item {
     float: right;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000339}}
-  .view-search .views-row .group-teaser-left {
+  .views-row .group-teaser-left {
     width: 40.67797%;
     float: left;
     margin-right: 1.69492%;
     margin-left: 0;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/blocks\/_reviews-list\.scss}line{font-family:\0000343}}
-  .view-search .views-row .group_teaser_right {
+  .views-row .group_teaser_right {
     width: 49.15254%;
     float: right;
     margin-right: 0;
