--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/misc/_site-branding.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/misc/_site-branding.scss
@@ -23,7 +23,7 @@
   line-height: 66px;
 
   &:hover {
-    color: $dark-blue;
+    color: $dark-grey;
   }
   @include at-breakpoint($tab) {
     line-height: inherit;
