--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/menus/_main-menu.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/menus/_main-menu.scss
@@ -11,24 +11,18 @@
     margin: 0;
     padding: 0;
     li {
+      @include button2(#a65353);
       list-style: none;
       float: left;
-      height: 40px;
-      line-height: 40px;
-      margin: 0 $horz-spacing-unit;
-      -moz-transition: all 0.1s ease-in-out;
-      -webkit-transition: all 0.3s ease-in-out 0s;
-      transition: all 0.3s ease-in-out 0s;
-      -o-transition: all 0.3s ease-in-out 0s;
-      @include at-breakpoint($tab) {
-        height: 80px;
-        line-height: 80px;
+      margin: 0 $horz-spacing-unit / 2;
+      &.first {
+        @include button2(#397339);
       }
-      &:hover{
-        border-bottom: 0.5em solid $dark-blue;
-        a {
-          color: $dark-blue;
-        }
+      &.last {
+        @include button2(#e77b36);
+      }
+      @include at-breakpoint($tab) {
+        margin-top: 25px;
       }
     }
   }
