Updated button font

--- a/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
+++ b/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
@@ -1228,12 +1228,13 @@ a#review-now::-moz-focus-inner {
   -ms-animation-name: glowing;
   -o-animation-name: glowing;
   animation-name: glowing;
-  height: 32px;
-  line-height: 32px;
-  padding: 0px 19.2px;
+  font-size: 18px;
+  font-size: 1.125rem;
+  height: 40px;
+  line-height: 40px;
+  padding: 0px 1em;
   font-weight: 400;
-  font-size: 14px;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "Maven Pro", Helvetica, Arial, sans-serif;
   text-decoration: none;
   text-align: center;
   background: #a65353;
@@ -1269,6 +1270,20 @@ a#review-now::-moz-focus-inner {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000383}}
 .block--menu.block--system-main-menu ul li:focus {
   outline: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000386}}
+.block--menu.block--system-main-menu ul li a {
+  text-decoration: none;
+  color: #fff;
+  height: 100%;
+  display: block;
+}
+@media (min-width: 70em) {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_main-menu\.scss}line{font-family:\0000313}}
+  .block--menu.block--system-main-menu ul li {
+    font-size: 20px;
+    font-size: 1.25rem;
+  }
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_main-menu\.scss}line{font-family:\0000318}}
 .block--menu.block--system-main-menu ul li.first {
@@ -1311,12 +1326,13 @@ a#review-now::-moz-focus-inner {
   -ms-animation-name: glowing;
   -o-animation-name: glowing;
   animation-name: glowing;
-  height: 32px;
-  line-height: 32px;
-  padding: 0px 19.2px;
+  font-size: 18px;
+  font-size: 1.125rem;
+  height: 40px;
+  line-height: 40px;
+  padding: 0px 1em;
   font-weight: 400;
-  font-size: 14px;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "Maven Pro", Helvetica, Arial, sans-serif;
   text-decoration: none;
   text-align: center;
   background: #397339;
@@ -1349,6 +1365,20 @@ a#review-now::-moz-focus-inner {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000383}}
 .block--menu.block--system-main-menu ul li.first:focus {
   outline: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000386}}
+.block--menu.block--system-main-menu ul li.first a {
+  text-decoration: none;
+  color: #fff;
+  height: 100%;
+  display: block;
+}
+@media (min-width: 70em) {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_main-menu\.scss}line{font-family:\0000318}}
+  .block--menu.block--system-main-menu ul li.first {
+    font-size: 20px;
+    font-size: 1.25rem;
+  }
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_main-menu\.scss}line{font-family:\0000321}}
 .block--menu.block--system-main-menu ul li.last {
@@ -1391,12 +1421,13 @@ a#review-now::-moz-focus-inner {
   -ms-animation-name: glowing;
   -o-animation-name: glowing;
   animation-name: glowing;
-  height: 32px;
-  line-height: 32px;
-  padding: 0px 19.2px;
+  font-size: 18px;
+  font-size: 1.125rem;
+  height: 40px;
+  line-height: 40px;
+  padding: 0px 1em;
   font-weight: 400;
-  font-size: 14px;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: "Maven Pro", Helvetica, Arial, sans-serif;
   text-decoration: none;
   text-align: center;
   background: #e77b36;
@@ -1430,20 +1461,25 @@ a#review-now::-moz-focus-inner {
 .block--menu.block--system-main-menu ul li.last:focus {
   outline: none;
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000386}}
+.block--menu.block--system-main-menu ul li.last a {
+  text-decoration: none;
+  color: #fff;
+  height: 100%;
+  display: block;
+}
+@media (min-width: 70em) {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_main-menu\.scss}line{font-family:\0000321}}
+  .block--menu.block--system-main-menu ul li.last {
+    font-size: 20px;
+    font-size: 1.25rem;
+  }
+}
 @media (min-width: 44em) {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_main-menu\.scss}line{font-family:\0000313}}
   .block--menu.block--system-main-menu ul li {
     margin-top: 25px;
   }
-}
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_main-menu\.scss}line{font-family:\0000329}}
-.block--menu.block--system-main-menu a {
-  text-decoration: none;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 1.3em;
-  color: #fff;
-  height: 100%;
-  display: block;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/menus\/_mob-menu\.scss}line{font-family:\000031}}
