updated button css

--- a/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
+++ b/sites/travellingchair.net/themes/tchair_ohm/css/styles.css
@@ -835,6 +835,46 @@ img, media {
   background-color: #FFF;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/components\/forms\/_general\.scss}line{font-family:\000031}}
+.views-exposed-form .views-exposed-widget .form-submit {
+  display: inline-block;
+  height: 2.2em;
+  margin: 0;
+  padding: 0 1.2em;
+  background-color: #222222;
+  border: none;
+  color: #FFF;
+  font-weight: 700;
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 2.2;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  vertical-align: middle;
+  white-space: nowrap;
+  overflow: visible;
+  cursor: pointer;
+  margin-top: 0;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000331}}
+.views-exposed-form .views-exposed-widget .form-submit, .views-exposed-form .views-exposed-widget .form-submit:hover, .views-exposed-form .views-exposed-widget .form-submit:active, .views-exposed-form .views-exposed-widget .form-submit:focus, .views-exposed-form .views-exposed-widget .form-submit:visited {
+  text-decoration: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000335}}
+.views-exposed-form .views-exposed-widget .form-submit:hover {
+  background-color: #6a7076;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000340}}
+.views-exposed-form .views-exposed-widget .form-submit:active, .views-exposed-form .views-exposed-widget .form-submit:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/byrnef87\/Sites\/tchair\/sites\/travellingchair\.net\/themes\/tchair_ohm\/sass\/partials\/utility\/abstractions\/_button\.scss}line{font-family:\0000345}}
+.views-exposed-form .views-exposed-widget .form-submit::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
 /**
  * $SEARCH-FORM
  */
