--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
@@ -8,6 +8,7 @@
 @import "components/misc/venue";
 // Forms
 @import "components/forms/filter-tips";
+@import "components/forms/general";
 @import "components/forms/search-form";
 @import "components/forms/password-confirm";
 @import "components/forms/collapsible";
