--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/_forms.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/_forms.scss
@@ -1,3 +1,104 @@
-@import "forms/form-items";
-@import "forms/passwords";
-@import "forms/fieldsets";
+#{$text-inputs} {
+  @include font-size(16px);
+  @include border-radius(5px);
+  @include transition(all 0.30s ease-in-out);
+  display: block;
+  border-image: none;
+  border: 1px solid $light-grey;
+  background-color: $bg-color;
+  height: 2rem;
+  width: 14rem;
+  padding-left: 0.5rem;
+  outline: none;
+  padding-top: 0;
+  &:focus {
+    box-shadow: 0 0 5px $orange;
+    border: 1px solid $orange;
+    padding-top: 0;
+  }
+}
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.2rem;
+}
+input[type="submit"] {
+  @include button();
+  display: inline-block;
+  vertical-align: bottom;
+  margin-bottom: 0.2rem;
+}
+[disabled] {
+
+}
+
+.form-wrapper {
+  margin-bottom: $vert-spacing-unit;
+}
+
+// FIELDSET
+fieldset {
+  margin-left: 0;
+  margin-right: 0;
+  padding: ($vert-spacing-unit / 2) $horz-spacing-unit $vert-spacing-unit $horz-spacing-unit;
+
+  border-color: $light-grey;
+}
+.fieldset-description {
+  margin-bottom: $vert-spacing-unit / 2;
+  color: $mid-grey;
+  font-style: italic;
+}
+.vertical-tabs fieldset.vertical-tabs-pane {
+  padding: $vert-spacing-unit $horz-spacing-unit;
+}
+legend {
+  @include font-size(18px);
+  padding: 0 0.8em;
+  color: $mid-grey;
+}
+
+// FORM ITEM
+.form-item {
+  color: $mid-grey;
+
+  label {
+    margin-bottom: 0.4em;
+  }
+  .form-select,
+  .form-text,
+  .form-textarea {
+    width: 100%;
+    max-width: 400px;
+    background-color: #FFF;
+    border: 1px solid $light-grey;
+    vertical-align: middle;
+  }
+  .description {
+    margin-top: 0.2em;
+    font-style: italic;
+  }
+}
+
+.container-inline {
+  .form-select,
+  .form-text,
+  .form-textarea {
+    width: auto;
+  }
+}
+
+// PASSWORD
+.password-indicator {
+  height: 0.8em;
+  background: none;
+  border: 1px solid $light-grey;
+
+  .indicator {
+    background: $pale-orange;
+  }
+}
+
+.password-strength-title {
+  margin-bottom: 0.2em;
+}
