--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/utility/abstractions/_button.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/utility/abstractions/_button.scss
@@ -3,9 +3,9 @@
 
 @mixin button() {
   display: inline-block;
-  height: 2.2em;
+  height: 2rem;
   margin: 0;
-  padding: 0 1.2em;
+  padding: 0 1.2rem;
 
   background-color: $dark-grey;
 
@@ -15,10 +15,9 @@
   font-weight: 700;
   font-family: inherit;
   font-size: 100%;
-  line-height: 2.2;
+  line-height: 2;
   letter-spacing: 0.15em;
   text-transform: uppercase;
-  vertical-align: middle;
   white-space: nowrap;
 
   overflow: visible;
